--- a/style.css
+++ b/style.css
@@ -10,23 +10,23 @@
 }
 
 .numeros{
+    padding: 15%     ;
     height:700px;
-    width: 380px;
-    background-color: rgb(26, 27, 27);
+    width: 310px;
+    background-color: rgb(25, 25, 26);
 }
 
 button{
-    height: 100px;
-    width: 100px;
-    background-color: rgb(180, 190, 190);
-    border-radius: 10px;
+    height: 90px;
+    width: 90px;
+    background-color: rgb(109, 119, 119);
+    border-radius: 30px;
     font-family: 'OPTICalculator';
-    font-size: 30px;
+    font-size: 20px;
 }
 #pantalla{
-    height: 90px;
-    width: 440px;
-    background-color: rgb(46, 56, 44);
+    width: 97%;
+    background-color: rgb(25, 25, 26);
     font-size: 50px;
     font-family: 'OPTICalculator'
 }
@@ -34,4 +34,7 @@ button{
     color: rgb(253, 253, 253);
     height: 40px;
     background-color: rgb(79, 79, 82);
+}
+body{
+    background-color: rgb(25, 25, 26);
 }
